--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@
 /WATA.LIS/WATA.LIS/bin/Debug/net6.0-windows/MahApps.Metro.dll
 /WATA.LIS/WATA.LIS/bin/Debug/net6.0-windows/runtimes
 /WATA.LIS/WATA.LIS/bin/Debug/net6.0-windows/LOG
+/WATA.LIS/packages
+/WATA.LIS/WATA.LIS.WPS/obj/Debug
