--- a/WATA.LIS/Modules/WATA.LIS.SENSOR.UHF_RFID/WATA.LIS.SENSOR.UHF_RFID.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.SENSOR.UHF_RFID/WATA.LIS.SENSOR.UHF_RFID.csproj
@@ -4,6 +4,7 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NetMQ" Version="4.0.1.10" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
