1. 거리센서, RFID 이벤트 연동 2. Main UI 보강 3. WPS 강제 종료 기능 추가

--- a/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
@@ -4,9 +4,15 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Views\wata_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WATA.LIS.Core\WATA.LIS.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\wata_logo.png" />
   </ItemGroup>
 </Project>
