--- a/WATA.LIS/Modules/WATA.LIS.SENSOR.Distance/WATA.LIS.SENSOR.Distance.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.SENSOR.Distance/WATA.LIS.SENSOR.Distance.csproj
@@ -9,5 +9,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WATA.LIS.Core\WATA.LIS.Core.csproj" />
+    <ProjectReference Include="..\WATA.LIS.SENSOR.UHF_RFID\WATA.LIS.SENSOR.UHF_RFID.csproj" />
   </ItemGroup>
 </Project>
