--- a/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Configurations>Debug;Release;Remote</Configurations>
+    <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\wata_logo.png" />
