--- a/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
@@ -4,6 +4,8 @@
     <UseWPF>true</UseWPF>
     <Configurations>Debug;Release;Remote</Configurations>
     <BaseOutputPath></BaseOutputPath>
+    <AssemblyVersion>9.9.9.10</AssemblyVersion>
+    <FileVersion>9.9.9.10</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\wata_logo.png" />
