--- a/WATA.LIS/WATA.LIS.Core/WATA.LIS.Core.csproj
+++ b/WATA.LIS/WATA.LIS.Core/WATA.LIS.Core.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Configurations>Debug;Release;Remote</Configurations>
+    <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.15" />
