--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@
 /WATA.LIS/WATA.LIS/bin/Debug/net6.0-windows10.0.18362.0/AsyncIO.dll
 /WATA.LIS/WATA.LIS/bin/Debug/net6.0-windows10.0.18362.0/ApulsetechNet.dll
 /WATA.LIS/WATA.LIS.Core/bin/Debug/net6.0-windows10.0.18362.0
+/WATA.LIS/Modules/WATA.LIS.INDICATOR.LED/bin/Debug/net6.0-windows10.0.18362.0
+/WATA.LIS/Modules/WATA.LIS.INDICATOR.LED/obj
