--- a/WATA.LIS/WATA.LIS/WATA.LIS.csproj
+++ b/WATA.LIS/WATA.LIS/WATA.LIS.csproj
@@ -17,9 +17,9 @@
     <ProjectReference Include="..\Modules\WATA.LIS.Main\WATA.LIS.Main.csproj" />
     <ProjectReference Include="..\Modules\WATA.LIS.SENSOR.Distance\WATA.LIS.SENSOR.Distance.csproj" />
     <ProjectReference Include="..\Modules\WATA.LIS.SENSOR.UHF_RFID\WATA.LIS.SENSOR.UHF_RFID.csproj" />
+    <ProjectReference Include="..\Modules\WATA.LIS.SENSOR.WEIGHT\WATA.LIS.SENSOR.WEIGHT.csproj" />
     <ProjectReference Include="..\Modules\WATA.LIS.VISION.Camera\WATA.LIS.VISION.Camera.csproj" />
     <ProjectReference Include="..\WATA.LIS.Core\WATA.LIS.Core.csproj" />
-    <ProjectReference Include="..\WATA.LIS.INDICATOR.LED\WATA.LIS.INDICATOR.LED.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resource\" />
