1. 판토스 POC 기능 추가 (무게센서) 2. 패트라이트 LED추가

--- a/WATA.LIS/Modules/WATA.LIS.INDICATOR.LED/WATA.LIS.INDICATOR.LED.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.INDICATOR.LED/WATA.LIS.INDICATOR.LED.csproj
@@ -22,5 +22,8 @@
     <Reference Include="LibUsbDotNet">
       <HintPath>Libary\LibUsbDotNet.dll</HintPath>
     </Reference>
+    <Reference Include="NeUsbController">
+      <HintPath>Libary\NeUsbController.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
