indicator 통신단 dps 통신단 수정

--- a/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.Main/WATA.LIS.Main.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WATA.LIS.Core\WATA.LIS.Core.csproj" />
+    <ProjectReference Include="..\..\WATA.LIS.IF.DPS\WATA.LIS.IF.DPS.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Views\wata_logo.png" />
