--- a/WATA.LIS/Modules/WATA.LIS.VISION.Camera/WATA.LIS.VISION.Camera.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.VISION.Camera/WATA.LIS.VISION.Camera.csproj
@@ -12,5 +12,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WATA.LIS.Core\WATA.LIS.Core.csproj" />
+    <ProjectReference Include="..\WATA.LIS.SENSOR.WEIGHT\WATA.LIS.SENSOR.WEIGHT.csproj" />
   </ItemGroup>
 </Project>
