--- a/WATA.LIS/Modules/WATA.LIS.VISION.CAM/WATA.LIS.VISION.CAM.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.VISION.CAM/WATA.LIS.VISION.CAM.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="OpenCvSharp4.Extensions" Version="4.10.0.20240616" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
     <PackageReference Include="ZXing.Net" Version="0.16.6" />
