1. 펨토메가 코드 추가

--- a/WATA.LIS/Modules/WATA.LIS.VISION.CAM/WATA.LIS.VISION.CAM.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.VISION.CAM/WATA.LIS.VISION.CAM.csproj
@@ -18,4 +18,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\WATA.LIS.Core\WATA.LIS.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="ob_csharp">
+      <HintPath>Model\ob_csharp.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
