1. OrbbecSDK.log.txt 언트래킹

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@
 /WATA.LIS/WATA.LIS.Core/bin/Debug/net6.0-windows10.0.18362.0
 /WATA.LIS/Modules/WATA.LIS.INDICATOR.LED/bin/Debug/net6.0-windows10.0.18362.0
 /WATA.LIS/Modules/WATA.LIS.INDICATOR.LED/obj
+/WATA.LIS/WATA.LIS/bin/Debug/net8.0-windows10.0.18362.0/LOG/OrbbecSDK.log.txt
