--- a/WATA.LIS/WATA.LIS/WATA.LIS.csproj
+++ b/WATA.LIS/WATA.LIS/WATA.LIS.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
+  <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Modules\WATA.LIS.Heartbeat.Services\WATA.LIS.Heartbeat.Services.csproj" />
