--- a/WATA.LIS/WATA.LIS/SystemConfig/SystemConfig.json
+++ b/WATA.LIS/WATA.LIS/SystemConfig/SystemConfig.json
@@ -1,6 +1,6 @@
 {
   "main": {
-    "device_type": "WATA", //DPS, WIS_KINTEX , WIS_KINTEX, Singapore, Clark, Japan, DHL_KOREA, WATA
+    "device_type": "WATA", //DPS, WIS_KINTEX , WIS_KINTEX, Singapore, Clark, Japan, DHL_KOREA, WATA, Pantos_MTV, SDSA
     "workLocationId": "WATA_KGWANGJU_1F",
     "projectId": "afbb58611535449780cdb27a615afeb2",
     "mappingId": "b7c41f86e38f44a1847a4d1af3b1acb1",
@@ -19,18 +19,18 @@
   "led_buzzer": {
     "led_enable": 1,
     "OnlySpeark": 1,
-    "volume": 10,
+    "volume": 1,
     "lamp_IP": "172.30.1.151",
     "InfoLanguage": "KR" //KR, JP, EN
   },
   "distance_sensor": {
-    "distance_enable": 1,
+    "distance_enable": 0,
     "model_name": "SICK_SHORT", //Terrabee, TF_Mini, SICK_LONG, SICK_SHORT
     "comport": "COM3",
     "pick_up_distance_threshold": 240
   },
   "weight_sensor": {
-    "weight_enable": 1,
+    "weight_enable": 0,
     "comport": "COM7",
     "loadweight_timeout": 3000,
     "sensor_value": "TJ" //TJ, TCP
@@ -76,7 +76,7 @@
     "vision_pw": "wata2024"
   },
   "display": {
-    "display_enable": 1,
-    "display_type": "Platform" //StandAlone, Platform"
+    "display_enable": 0,
+    "display_type": "StandAlone" //StandAlone, Platform"
   }
 }
