--- a/WATA.LIS/WATA.LIS/SystemConfig/SystemConfig.json
+++ b/WATA.LIS/WATA.LIS/SystemConfig/SystemConfig.json
@@ -24,13 +24,13 @@
     "InfoLanguage": "KR" //KR, JP, EN
   },
   "distance_sensor": {
-    "distance_enable": 0,
+    "distance_enable": 1,
     "model_name": "SICK_SHORT", //Terrabee, TF_Mini, SICK_LONG, SICK_SHORT
     "comport": "COM3",
     "pick_up_distance_threshold": 240
   },
   "weight_sensor": {
-    "weight_enable": 0,
+    "weight_enable": 1,
     "comport": "COM7",
     "loadweight_timeout": 3000,
     "sensor_value": "TJ" //TJ, TCP
@@ -77,6 +77,6 @@
   },
   "display": {
     "display_enable": 0,
-    "display_type": "StandAlone" //StandAlone, Platform"
+    "display_type": "Platform" //StandAlone, Platform"
   }
 }
