--- a/WATA.LIS/Modules/WATA.LIS.SENSOR.NAV/WATA.LIS.SENSOR.NAV.csproj
+++ b/WATA.LIS/Modules/WATA.LIS.SENSOR.NAV/WATA.LIS.SENSOR.NAV.csproj
@@ -6,6 +6,8 @@
     <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="MQTTnet" Version="4.3.7.1207" />
+    <PackageReference Include="MQTTnet.AspNetCore" Version="4.3.7.1207" />
     <PackageReference Include="NetMQ" Version="4.0.1.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
