1. 북미 SDS 단위 테스트. 하드코딩값 추가

--- a/WATA.LIS/WATA.LIS/SystemConfig/SystemConfig.json
+++ b/WATA.LIS/WATA.LIS/SystemConfig/SystemConfig.json
@@ -1,6 +1,6 @@
 {
   "main": {
-    "device_type": "SDSA", //DPS, WIS_KINTEX , WIS_KINTEX, Singapore, Clark, Japan, DHL_KOREA, WATA, Pantos_MTV, SDSA
+    "device_type": "WATA", //DPS, WIS_KINTEX , WIS_KINTEX, Singapore, Clark, Japan, DHL_KOREA, WATA, Pantos_MTV, SDSA
     "workLocationId": "WATA_KGWANGJU_1F",
     "projectId": "afbb58611535449780cdb27a615afeb2",
     "mappingId": "b7c41f86e38f44a1847a4d1af3b1acb1",
